--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <div class="col-md-3 col-sm-6">
         <div class="speaker">
           <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/mukund.jpg" height="120px" width="120px"> </figure>
-          <h5>Prof S Venugopal</h5>
+          <h5>Dr. Mukund Janardhanan</h5>
           <div class="speaker_name">Programme Director- Engineering Design and Management<br><br>
             University of Leicester, UK
           </div>
@@ -287,7 +287,11 @@
     <div class="row">
       <div class="col-md-4 col-sm-6">
         <div class="schedule-box"> <span class="subhead_title">Chief Patron</span>
-          <p>Dr Mrs Elizabeth Verghese, Chancellor</p>
+          <ul style="line-height: 50%;">
+            <li>
+              <p align="left">Dr Mrs Elizabeth Verghese, Chancellor</p>
+            </li>
+          </ul>
           <span class="subhead_title">Patrons</span>
           <ul style="line-height: 50%">
             <li>
@@ -305,63 +309,67 @@
             <li>
               <p align="left">&nbsp; Mr Ashok Verghese, Director</p>
             </li>
+            <li>
+              <p align="left">&nbsp; Dr. Shivathanu Pillai, Professor Emeritus, HITS</p>
+            </li>
           </ul>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
-        <div class="schedule-box"><span class="subhead_title">General Co-Chairs</span> </u>
-          <ul style="line-height: 80%">
-            <li>
-              <p align="left">&nbsp;&nbsp;Dr G Ilavazhagan, Director (Intnl. Aff.)</p>
-            </li>
-            <li>
-              <p align="left">&nbsp;&nbsp;Dr Angelina Geetha, &nbsp;Dean (E &amp; T) </p>
-            </li>
-          </ul>
-        </div>
         <div class="schedule-box"> <span class="subhead_title">Conference Chairs</span>
           <ul style="line-height: 80%">
             <li>
-              <p align="left">&nbsp;&nbsp;Prof. D Dinakaran,&nbsp; Head (ANRO)</p>
+              <p align="left">&nbsp;&nbsp;Dr. D Dinakaran,&nbsp; HITS</p>
             </li>
             <li>
-              <p align="left">&nbsp;&nbsp;Prof. M M Ramya, &nbsp; ANRO</p>
+              <p align="left">&nbsp;&nbsp;Dr. RM Kuppan Chetty, &nbsp; HITS</p>
             </li>
           </ul>
+        <div class="schedule-box"><span class="subhead_title">General Co-Chairs</span> </u>
+          <ul style="line-height: 80%">
+            <li>
+              <p align="left">&nbsp;&nbsp;Ms. N. Seenu, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Dr. A. Joshuva, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Dr. G. Satheesh Kumar, SSN</p>
+            </li>
+          </ul>
+        </div>
           <span class="subhead_title">Convenor</span>
           <ul style="line-height: 80%">
             <li>
-              <p align="left">&nbsp;&nbsp;Dr. RM Kuppan Chetty</p>
-            </li>
-          </ul>
-          <span class="subhead_title">Co-Convenor</span>
-          <ul style="line-height: 80%">
-            <li>
-              <p align="left">&nbsp;&nbsp;Dr. A Joshuva</p>
+              <p align="left">&nbsp;&nbsp;Ms. N. Seenu, HITS</p>
             </li>
             <li>
-              <p align="left">&nbsp;&nbsp;Mr. S. Janakiraman</p>
+              <p align="left">&nbsp;&nbsp;Dr. Mukund Janardhanan, University of Leicester</p>
             </li>
           </ul>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
-        <div class="schedule-box"><span class="subhead_title">Coordinators</span>
+        <div class="schedule-box">
+          <span class="subhead_title">Co-Convenor</span>
+          <ul style="line-height: 80%">
+            <li>
+              <p align="left">&nbsp;&nbsp;Dr. R.S. Nakandhrakumar, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Dr. Rob Thronton, University of Leicester</p>
+            </li>
+          </ul>
+          <span class="subhead_title">Organizing Committee</span>
           <ul style="line-height: 70%">
-            <u>Registration </u> <br>
             <br>
             <br>
             <li>
               <p align="left">&nbsp;&nbsp;Mrs Manju Mohan </p>
             </li>
             <li>
-              <p align="left">&nbsp;&nbsp;Mrs N Seenu </p>
+              <p align="left">&nbsp;&nbsp;Mr V. Ramkumar</p>
             </li>
-            <br>
-            <br>
-            <u>Pre conference Event - Competition</u> <br>
-            <br>
-            <br>
             <li>
               <p align="left">&nbsp;&nbsp;Mrs S K Indumathi </p>
             </li>
@@ -369,10 +377,13 @@
               <p align="left">&nbsp;&nbsp;Mr Arun Raja</p>
             </li>
             <li>
-              <p align="left">&nbsp;&nbsp;Dr Nakandhrakumar</p>
+              <p align="left">&nbsp;&nbsp;Mr Jaise Jose</p>
             </li>
             <li>
-              <p align="left">&nbsp;&nbsp;Mr G Deenadayalan</p>
+              <p align="left">&nbsp;&nbsp;Mr Sugin Elankavi</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Mr Jayarajan</p>
             </li>
           </ul>
         </div>
