kuppan chetty sir changes

--- a/index.html
+++ b/index.html
@@ -79,19 +79,23 @@
       <div class="col-sm-5">
         <h3 class="section-title multiple-title">Focus Areas?</h3>
         <p>Here are some of the topics that will feature this year:<br>
-          Robotics in:
         </p>
-        <ul class="">
-          <li>Disaster Mitigation and Management</li>
-          <li>Reconnaissance, Search & Rescue, Firefighting, Demining etc.</li>
-          <li>Inspection and structural assessment of critical infrastructure</li>
-          <li>Sustainable development in meeting UN – SDG’s</li>
-          <li>Education and Learning</li>
-          <li>Assistive and Rehabilitation</li>
-          <li>Medical, Service, Safety and Agriculture</li>
-          <li>Collaborative /Cooperative Robotics</li>
-          <li>Autonomous and Cognitive Robots</li>
-          <li>Expert and Evolutionary Robotics</li>
+        <ul>
+          <li>
+          Robotics in:
+          <ul>
+            <li>Disaster Mitigation and Management</li>
+            <li>Reconnaissance, Search & Rescue, Firefighting, Demining etc.</li>
+            <li>Inspection and structural assessment of critical infrastructure</li>
+            <li>Sustainable development in meeting UN – SDG’s</li>
+            <li>Education and Learning</li>
+            <li>Assistive and Rehabilitation</li>
+            <li>Medical, Service, Safety and Agriculture</li>
+            <li>Collaborative /Cooperative Robotics</li>
+            <li>Autonomous and Cognitive Robots</li>
+            <li>Expert and Evolutionary Robotics</li>
+          </ul>
+          </li>
           <li>Intelligent Automation</li>
           <li>Mechatronics, IoT, IIoT, Industry 4.0</li>
           <li>Modeling, Simulation and Design of Industrial Systems</li>
@@ -99,7 +103,7 @@
           <li>Artificial Intelligence & Machine Learning</li>
           <li>Sensors & Signal Processing</li>
           <li>Virtual & Augmented Reality</li>
-          &nbsp;&nbsp;&nbsp;and allied areas
+          and allied areas
         </ul>
       </div>
       <!-- /.col-sm-3 --> 
@@ -152,10 +156,10 @@
         <div class="schedule-box"> <span class="subhead_title">Important Dates</span>
           <div class="time">
             <p>Submission of Full length paper:
-              <mark> 7th January 2023 </mark>
+              <mark> TBA</mark>
             </p>
-            <p> Notification of Acceptance: 25st January 2023 </p>
-            <p> Submission of Camera Ready Paper & 1st February 2023 </p>
+            <p> Notification of Acceptance: TBA</p>
+            <p> Submission of Camera Ready Paper: TBA </p>
           </div>
         </div>
       </div>
@@ -181,8 +185,7 @@
       </div>
       <div class="col-md-12">
         <h4><font color="black"><u>Publications </u></font></h4>
-        <span class="note">All accepted and presented papers will be published in CLAWAR proceedings: Robotics Automation and Non-Destructive Evaluation 2023 </span> <br>
-        <img src="assets/images/journals/clawar.png" height="30" >(Scopus indexed) </div>
+        <span class="note">All accepted and presented papers will be published in Scopus indexed proceedings: Robotics Automation and Non-Destructive Evaluation 2023 </span> <br>
     </div>
   </div>
 </section>
@@ -224,29 +227,30 @@
     </div>
     <br>
     <br>
-    <div class="row">
-      <div class="col-md-3 col-sm-6" style="display: flex; align-items: center;">
+    <div class="row speaker-row">
+      <div class="col-md-3 col-sm-6">
         <div class="speaker">
           <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/pillai.jpg" height="120px" width="120px"> </figure>
           <h5>Dr. Shivathanu Pillai</h5>
-          <div class="speaker_name">Professor Emeritus<br><br>
-            Hindustan Institute of Technology and Science, INDIA</div>
+          <div class="speaker_name">Professor Emeritus<br>
+            <p>Hindustan Institute of Technology and Science, India</p></div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="speaker">
           <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/rob.jpg" height="110px" width="110px"> </figure>
           <h5>Dr. Rob Thronton</h5>
-          <div class="speaker_name">Associate Professor, Structural Integrity<br><br>
-            University of Leicester, UK</div>
+          <div class="speaker_name">Associate Professor<br>
+            <p>Structural Integrity University of Leicester, UK</p></div>
         </div>
       </div>
       <div class="col-md-3 col-sm-6">
         <div class="speaker">
           <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/mukund.jpg" height="120px" width="120px"> </figure>
           <h5>Dr. Mukund Janardhanan</h5>
-          <div class="speaker_name">Programme Director- Engineering Design and Management<br><br>
-            University of Leicester, UK
+          <div class="speaker_name">Programme Director
+            <p>Engineering Design and Management</p>
+            <p>University of Leicester, UK</p>
           </div>
         </div>
       </div>
@@ -400,27 +404,22 @@
         <table cellspacing="3" border="1px" bordercolor="#000000">
           <tr bgcolor="#000000">
             <td align="center"><font color="white"><b>Charges</b></font></td>
-            <td align="center"><font color="white"><b>Early Bird Registration</b></font></td>
             <td align="center"><font color="white"><b>Standard Registration </b></font></td>
           </tr>
           <tr>
             <td align="center">Research Scholars / Students </td>
-            <td align="center">1500</td>
             <td align="center">2000</td>
           </tr>
           <tr>
             <td align="center">Faculty</td>
-            <td align="center">2500</td>
             <td align="center">3000</td>
           </tr>
           <tr>
             <td align="center">Industry </td>
-            <td align="center"> 4500 </td>
             <td align="center">5000</td>
           </tr>
           <tr>
             <td align="center">Foriegn Authors </td>
-            <td align="center"> 175 USD </td>
             <td align="center">200 USD </td>
           </tr>
         </table>
@@ -428,12 +427,8 @@
       <div class="col-md-6">
         <h4> Mode of Payment:</h4>
         <h4> Online Payment: </h4>
-        <p> <strong>Online transfer can be wired to the following account details: <br>
-          Account Number: 255401000004418 <br>
-          Beneficiary : Project Robot <br>
-          IFS Code: IOBA0002554 <br>
-          Bank: Indian Overseas Bank <br>
-          Branch: Padur</strong> <br>
+        <p> <strong>Online transfer can be wired to the following account details:</strong><br>
+          TBA
           (or)<br>
         </p>
         <h4><STRONG>Demand Draft: </STRONG></h4>
