committee members update

--- a/index.html
+++ b/index.html
@@ -317,6 +317,24 @@
               <p align="left">&nbsp; Dr. Shivathanu Pillai, Professor Emeritus, HITS</p>
             </li>
           </ul>
+          <span class="subhead_title">Advisory Board</span>
+          <ul style="line-height: 50%">
+            <li>
+              <p align="left">Dr. R. Manoharan, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;Dr. NandaKumar, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;Dr. Angelina Geetha, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;Dr. Uppu Ramachandriah, HITS</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;Dr. JM. Mathana Joseph, HITS,</p>
+            </li>
+          </ul>
         </div>
       </div>
       <div class="col-md-4 col-sm-6">
@@ -329,16 +347,17 @@
               <p align="left">&nbsp;&nbsp;Dr. RM Kuppan Chetty, &nbsp; HITS</p>
             </li>
           </ul>
-        <div class="schedule-box"><span class="subhead_title">General Co-Chairs</span> </u>
+        <div class="schedule-box"><span class="subhead_title">Publication Chairs</span> </u>
           <ul style="line-height: 80%">
-            <li>
-              <p align="left">&nbsp;&nbsp;Ms. N. Seenu, HITS</p>
-            </li>
             <li>
               <p align="left">&nbsp;&nbsp;Dr. A. Joshuva, HITS</p>
             </li>
+          </ul>
+        </div>
+        <div class="schedule-box"><span class="subhead_title">Publication Co-Chairs</span> </u>
+          <ul style="line-height: 80%">
             <li>
-              <p align="left">&nbsp;&nbsp;Dr. G. Satheesh Kumar, SSN</p>
+              <p align="left">&nbsp;&nbsp;Dr. S. Janakiraman, HITS</p>
             </li>
           </ul>
         </div>
@@ -351,10 +370,6 @@
               <p align="left">&nbsp;&nbsp;Dr. Mukund Janardhanan, University of Leicester</p>
             </li>
           </ul>
-        </div>
-      </div>
-      <div class="col-md-4 col-sm-6">
-        <div class="schedule-box">
           <span class="subhead_title">Co-Convenor</span>
           <ul style="line-height: 80%">
             <li>
@@ -364,6 +379,10 @@
               <p align="left">&nbsp;&nbsp;Dr. Rob Thronton, University of Leicester</p>
             </li>
           </ul>
+        </div>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <div class="schedule-box">
           <span class="subhead_title">Organizing Committee</span>
           <ul style="line-height: 70%">
             <br>
@@ -388,6 +407,38 @@
             </li>
             <li>
               <p align="left">&nbsp;&nbsp;Mr Jayarajan</p>
+            </li>
+          </ul>
+          <span class="subhead_title">International Advisory Board</span>
+          <ul style="line-height: 70%">
+            <br>
+            <br>
+            <li>
+              <p align="left">&nbsp;&nbsp;Prof. Tariq Sattar, LSBU, UK</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Prof. Bui Trung Thanh, Hung Yen University, Vietnam</p>
+            </li>
+            <li>
+              <p   align="left">&nbsp;&nbsp;Prof. Dr. Mukund Janardhanan, University of Leicester, UK</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Prof. Md. Mamun Bin Ibne Reaz, UKM, Malaysia</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Prof. Shane Xie, University of Leeds, UK</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Prof. Phil Picton, University of Northampton, UK</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Prof. S. G. Ponnambalam, VIT Vellore, India</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Dr. Rob Thronton, University of Leicester, UK</p>
+            </li>
+            <li>
+              <p align="left">&nbsp;&nbsp;Dr. G. Satheesh Kumar, SSN Institutions, India</p>
             </li>
           </ul>
         </div>
