key dates section

--- a/index.html
+++ b/index.html
@@ -49,30 +49,44 @@
             Robotics, Automation and Non-Destructive Evaluation <br>
             (RANE 2023)</strong></font>
       </h2>
-      <span class="event_date">Mobile Robotics</span>
+      <span class="event_date">Mobile Robots</span>
       <div class="flex">
         <div>
-          Papers Submission DeadLine
+          <strong>
+            Papers Submission DeadLine
+          </strong>
           <br>
           9th June, 2023
         </div>
         <div>
-          Paper Acceptance Notification
+          <strong>
+
+            Paper Acceptance Notification
+          </strong>
           <br>
           7th July, 2023
         </div>
         <div>
-          Final Paper Submission DeadLine
+          <strong>
+
+            Final Paper Submission DeadLine
+          </strong>
           <br>
           14th July, 2023
         </div>
         <div>
-          Author Registration DeadLine
+          <strong>
+
+            Author Registration DeadLine
+          </strong>
           <br>
           27th July, 2023
         </div>
         <div>
-          Conference
+          <strong>
+
+            Conference
+          </strong>
           <br>
           7th August, 2023
         </div>
@@ -215,6 +229,8 @@
               </p>
               <p> Notification of Acceptance: 7th July, 2023</p>
               <p> Submission of Camera Ready Paper: 14th July, 2023</p>
+              <p> Author Registration DeadLine: 27th July, 2023</p>
+              <p> Conference: 27th July, 2023</p>
             </div>
           </div>
         </div>
