--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
         </div>
         <div class="col-sm-3">
           <h4><u>Templates and Styles -Download</u></h4>
-          <span class="subtext_head"><a href="assets/Template/RANE2023_LaTeX_Template.zip">Click here for LaTeX class
+          <span class="subtext_head"><a href="assets/Template/RANE2023_LaTeX_Template.tex">Click here for LaTeX class
               and related files</a></span><br>
-          <span class="subtext_head"><a href="assets/Template/RANE2023_Word_Template.zip">Click here for Microsoft Word
+          <span class="subtext_head"><a href="assets/Template/RANE2023_Word_Template.docm">Click here for Microsoft Word
               template </a></span><br>
           <br>
         </div>
@@ -263,7 +263,8 @@
           <h4>
             <font color="black"><u>Publications </u></font>
           </h4>
-          <span class="note">All accepted and presented papers will be published in Scopus indexed proceedings: Robotics
+          <span class="note">All accepted and presented papers will be published in AIP(American Institute of Physics)
+            Scopus indexed proceedings: Robotics
             Automation and Non-Destructive Evaluation 2023 </span> <br>
         </div>
       </div>
@@ -338,14 +339,6 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3 col-sm-6">
-          <div class="speaker">
-            <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/personlogo.png"
-                height="120px" width="120px"> </figure>
-            <h5>TBA</h5>
-            <div class="speaker_name">Affiliation</div>
-          </div>
-        </div>
       </div>
     </div>
     </div>
@@ -360,7 +353,7 @@
           <h3> <u>
               <font color="blue">
                 <center>
-                  <figure> <img alt="" class="img-responsive" src="assets/images/speakers/schedule.png" width="100%">
+                  <figure> <img alt="" class="img-responsive" src="assets/images/speakers/schedule.jpeg" width="100%">
                   </figure>
                 </center>
               </font>
