--- a/index.html
+++ b/index.html
@@ -223,9 +223,7 @@
           <h4>
             <font color="black"><u>Publications </u></font>
           </h4>
-          <span class="note">All accepted and presented papers will be published in AIP(American Institute of Physics)
-            Scopus indexed proceedings: Robotics
-            Automation and Non-Destructive Evaluation 2023 </span> <br>
+          <span class="note">all accepted and presented papers will be published in RANE 2023 conference proceedings and selective extended submissions will be published in Scopus indexed Journal</span> <br>
         </div>
       </div>
   </section>
