--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <h4>
             <font color="black"><u>Publications </u></font>
           </h4>
-          <span class="note">all accepted and presented papers will be published in RANE 2023 conference proceedings and selective extended submissions will be published in Scopus indexed Journal</span> <br>
+          <span class="note">all accepted and presented papers will be published in CLAWAR proceedings and will be submitted for indexing in Scopus</span> <br>
         </div>
       </div>
   </section>
