--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <div class="container">
       <div class="navbar-header">
         <!--logo-->
-        <div class="site-branding"> <a class="logo" href="rane.html"> RANE 2023 </a> </div>
+        <div class="site-branding">
+          <!-- <img src="/assets/images/partner/hits.png" alt="logo" style="height: 4rem;position: relative;right: 4rem"> -->
+          <a class="logo" href="rane.html"> RANE 2023 </a>
+        </div>
       </div>
       <!-- /.navbar-header -->
       <div class="navbar-header">
@@ -45,33 +48,41 @@
       <br>
       <span class="event_date">7 August, 2023</span> <br>
       <h2>
-        <font color="white"><strong>International Conference on <br>
+        <font color="white"><strong>4<sup>th</sup> International Conference on <br>
             Robotics, Automation and Non-Destructive Evaluation <br>
             (RANE 2023)</strong></font>
       </h2>
-      <span class="event_date">Mobile Robots</span>
+      <span class="event_date">Robotics in Sustainable Development</span>
+      <center>
+        ORGANISED BY
+        <h4>
+          <font>
+            <strong>
+              THE DEPARTMENT OF MECHATRONICS ENGINEERING
+            </strong>
+          </font>
+        </h4>
+        <img src="/assets/images/partner/hits.png" alt="">
+        <br>
+        <br>
+      </center>
     </div>
     </div>
   </header>
-  <center>
-    <img src="assets/images/partner/hits.png" height="12%" width="18%" style="padding:5px;">
-  </center>
   <section id="partner" class="section partner">
     <div class="row">
-      <div class="col-sm-2"> <a class="partner-box partner-box-anro" href="https://hindustanuniv.ac.in/anro/index.html">
-          <font size="2">Organised By
-        </a></div>
       <div class="col-sm-2"> <a class="partner-box partner-box-uol" href="https://hindustanuniv.ac.in/anro/index.html">
           <font size="2">UK Partner
         </a></div>
-      <div class="col-sm-2"> <a class="partner-box partner-box-ssn" href="https://hindustanuniv.ac.in/anro/index.html">
+      <div class="col-sm-3"> <a class="partner-box partner-box-ssn" href="https://hindustanuniv.ac.in/anro/index.html">
           <font size="2">Academic Partner
-        </a></div>
+        </a>
+      </div>
       <div class="col-sm-2"> <a class="partner-box partner-box-yagen"
           href="https://hindustanuniv.ac.in/anro/index.html">
           <font size="2">Industry Partner
         </a></div>
-      <div class="col-sm-2"> <a class="partner-box partner-box-rae" href="https://www.raeng.org.uk/">
+      <div class="col-sm-3"> <a class="partner-box partner-box-rae" href="https://www.raeng.org.uk/">
           <font size="2">Supported By
         </a></div>
       <div class="col-sm-2"> <a class="partner-box partner-box-mvr" href="https://www.raeng.org.uk/">
@@ -88,7 +99,7 @@
             for researchers, companies and end-users. </p>
           <p>Robots are no longer restricted to industrial environments. Today, the applications of robots have
             extensively expanded outside the factory environment. Due to the technological revolutions that happened in
-            the field of robotics and sustainable engineering, the theme of the RANE2023 focuses on <strong>“Robots and
+            the field of robotics and sustainable engineering, the theme of the RANE2023 focuses on <strong>“Robotics in
               Sustainable Development”</strong>.</p>
           <p>This year's theme is centers around the advanced technological innovations in robotics and its applications
             in various sectors such as service, assistance, healthcare, inspection etc. including meeting the UN
@@ -223,7 +234,22 @@
           <h4>
             <font color="black"><u>Publications </u></font>
           </h4>
-          <span class="note">all accepted and presented papers will be published in CLAWAR proceedings and will be submitted for indexing in Scopus</span> <br>
+          <span class="note">All accepted and presented papers will be published in CLAWAR proceedings (Scopus Indexed)
+            <br>
+            Top selected and extended version of papers will be considered for publication in
+            <ul>
+              <li>
+
+                International Journal of Advanced Mechatronics
+                Systems (IJAMechS) [Scopus Indexed]
+              </li>
+              <li>
+
+                Frontiers in Energy Research* (IF: 3.858) [Indexed in WoS, SCIE and Scopus]
+              </li>
+            </ul>
+          </span>
+          * APC charges applicable
         </div>
       </div>
   </section>
@@ -306,16 +332,11 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="section-title">Event Schedule</h3>
-          <br>
-          <h3> <u>
-              <font color="blue">
-                <center>
-                  <figure> <img alt="" class="img-responsive" src="assets/images/speakers/schedule.jpeg" width="100%">
-                  </figure>
-                </center>
-              </font>
-            </u></h3>
+          <h3 class="section-title">
+            <a style="text-decoration: underline;" href="assets/images/speakers/schedule.jpeg">
+              Event Schedule
+            </a>
+          </h3>
         </div>
       </div>
     </div>
@@ -332,46 +353,67 @@
           <div class="schedule-box"> <span class="subhead_title">Chief Patron</span>
             <ul style="line-height: 50%;">
               <li>
-                <p align="left">Dr Mrs Elizabeth Verghese, Chancellor</p>
+                <p align="left">Dr Elizabeth Verghese, Founder Chancellor</p>
+              </li>
+              <li>
+                <p align="left">Dr Anand Jacob Verghese, Chancellor</p>
               </li>
             </ul>
             <span class="subhead_title">Patrons</span>
             <ul style="line-height: 50%">
               <li>
-                <p align="left">Dr. Anand Jacob Verghese, Pro-Chancellor</p>
+                <p align="left">&nbsp; Mr Ashok Verghese, Pro-Chancellor</p>
               </li>
+              <li>
+                <p align="left">&nbsp; Dr Aby Sam, Executive Director</p>
+              </li>
+              <li>
+                <p align="left">&nbsp; Mr Enid Verghese Jacob, Deputy Director</p>
+              </li>
+            </ul>
+            <span class="subhead_title">Co-Patrons</span>
+            <ul style="line-height: 50%">
               <li>
                 <p align="left">&nbsp; Dr S N Sridhara, Vice Chancellor</p>
               </li>
               <li>
-                <p align="left">&nbsp; Dr. R. W. Alexander Jesudasan, Pro-Vice Chancellor</p>
-              </li>
-              <li>
-                <p align="left">&nbsp; Dr Aby Sam, Director</p>
-              </li>
-              <li>
-                <p align="left">&nbsp; Mr Ashok Verghese, Director</p>
-              </li>
-              <li>
-                <p align="left">&nbsp; Dr. Shivathanu Pillai, Professor Emeritus, HITS</p>
+                <p align="left">&nbsp; Dr R. W. Alexander Jesudasan, Pro-Vice Chancellor</p>
               </li>
             </ul>
             <span class="subhead_title">Advisory Board</span>
             <ul style="line-height: 50%">
               <li>
-                <p align="left">Dr. R. Manoharan, HITS</p>
+                <p align="left">&nbsp; Dr Shivathanu Pillai, Professor Emeritus</p>
               </li>
               <li>
-                <p align="left">&nbsp;Dr. NandaKumar, HITS</p>
+                <p align="left">&nbsp; Dr A Senthil Kumar, Director Research</p>
               </li>
               <li>
-                <p align="left">&nbsp;Dr. Angelina Geetha, HITS</p>
+                <p align="left">&nbsp;Dr J.M. Mathana Joseph, Dean Research</p>
               </li>
               <li>
-                <p align="left">&nbsp;Dr. Uppu Ramachandriah, HITS</p>
+                <p align="left">&nbsp;Dr Angelina Geetha, Dean E&T</p>
               </li>
               <li>
-                <p align="left">&nbsp;Dr. JM. Mathana Joseph, HITS,</p>
+                <p align="left">Dr V N Mani, Senior Research Scientist</p>
+              </li>
+            </ul>
+            <span class="subhead_title">Publication Committee</span>
+            <ul style="line-height: 50%">
+              <li>
+                <p align="left">Dr Pavan Kalyan Lingampally, Assistant Professor, HITS</p>
+              </li>
+              <li>
+                <p align="left">Ms Manju Mohan, Assistant Professor, HITS</p>
+              </li>
+              <li>
+                <p align="left">Ms Indumathi, Assistant Professor, HITS</p>
+              </li>
+              <li>
+                <p align="left">Dr Mukund Janardhanan, University of Leicester</p>
+              </li>
+              <li>
+                <p align="left">Mr Sugin Elankavi, JRF, HITS</p>
               </li>
             </ul>
           </div>
@@ -380,74 +422,52 @@
           <div class="schedule-box"> <span class="subhead_title">Conference Chairs</span>
             <ul style="line-height: 80%">
               <li>
-                <p align="left">&nbsp;&nbsp;Dr. D Dinakaran,&nbsp; HITS</p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Dr. RM Kuppan Chetty, &nbsp; HITS</p>
+                <p align="left">Dr RM Kuppan Chetty, HOD, Department of Mechatronics Engineering </p>
               </li>
             </ul>
+            <div class="schedule-box"><span class="subhead_title">Conference Co-Chairs</span> </u>
+              <ul style="line-height: 80%">
+                <li>
+                  <p align="left">Dr S Sivakumar, Associate Professor, HITS</p>
+                </li>
+              </ul>
+            </div>
             <div class="schedule-box"><span class="subhead_title">Publication Chairs</span> </u>
               <ul style="line-height: 80%">
                 <li>
-                  <p align="left">&nbsp;&nbsp;Dr. A. Joshuva, HITS</p>
+                  <p align="left">Dr Joshuva Arockia Dhanraj, Asst. Professor, HITS</p>
                 </li>
               </ul>
             </div>
             <div class="schedule-box"><span class="subhead_title">Publication Co-Chairs</span> </u>
               <ul style="line-height: 80%">
                 <li>
-                  <p align="left">&nbsp;&nbsp;Dr. S. Janakiraman, HITS</p>
+                  <p align="left">Dr S Janakiraman, Assistant Professor, HITS</p>
                 </li>
               </ul>
             </div>
             <span class="subhead_title">Convenor</span>
             <ul style="line-height: 80%">
               <li>
-                <p align="left">&nbsp;&nbsp;Ms. N. Seenu, HITS</p>
+                <p align="left">Ms N Seenu, Assistant Professor, HITS</p>
               </li>
               <li>
-                <p align="left">&nbsp;&nbsp;Dr. Mukund Janardhanan, University of Leicester</p>
+                <p align="left">Dr Mukund Janardhanan, University of Leicester</p>
               </li>
             </ul>
             <span class="subhead_title">Co-Convenor</span>
             <ul style="line-height: 80%">
               <li>
-                <p align="left">&nbsp;&nbsp;Dr. R.S. Nakandhrakumar, HITS</p>
+                <p align="left">Dr R S Nakandhrakumar, Associate Professor, HITS</p>
               </li>
               <li>
-                <p align="left">&nbsp;&nbsp;Dr. Rob Thronton, University of Leicester</p>
+                <p align="left">Dr Rob Thronton, University of Leicester</p>
               </li>
             </ul>
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="schedule-box">
-            <span class="subhead_title">Organizing Committee</span>
-            <ul style="line-height: 70%">
-              <br>
-              <br>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mrs Manju Mohan </p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mr V. Ramkumar</p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mrs S K Indumathi </p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mr Arun Raja</p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mr Jaise Jose</p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mr Sugin Elankavi</p>
-              </li>
-              <li>
-                <p align="left">&nbsp;&nbsp;Mr Jayarajan</p>
-              </li>
-            </ul>
             <span class="subhead_title">International Advisory Board</span>
             <ul style="line-height: 70%">
               <br>
@@ -459,9 +479,6 @@
                 <p align="left">&nbsp;&nbsp;Prof. Bui Trung Thanh, Hung Yen University, Vietnam</p>
               </li>
               <li>
-                <p align="left">&nbsp;&nbsp;Prof. Dr. Mukund Janardhanan, University of Leicester, UK</p>
-              </li>
-              <li>
                 <p align="left">&nbsp;&nbsp;Prof. Md. Mamun Bin Ibne Reaz, UKM, Malaysia</p>
               </li>
               <li>
@@ -471,13 +488,112 @@
                 <p align="left">&nbsp;&nbsp;Prof. Phil Picton, University of Northampton, UK</p>
               </li>
               <li>
-                <p align="left">&nbsp;&nbsp;Prof. S. G. Ponnambalam, VIT Vellore, India</p>
+                <p align="left">&nbsp;&nbsp;Dr. Ramakrishnan Narayanan, Monash University, Malaysia</p>
               </li>
               <li>
-                <p align="left">&nbsp;&nbsp;Dr. Rob Thronton, University of Leicester, UK</p>
+                <p align="left">
+
+                  Prof. Edwin Tan Chee Pin, Monash University, Malaysia
+                </p>
               </li>
               <li>
-                <p align="left">&nbsp;&nbsp;Dr. G. Satheesh Kumar, SSN Institutions, India</p>
+                <p align="left">
+
+                  Prof. Ali Mostafaeipour, Yazd University, Iran Prof. Nachiappan Subramanian, University of Sussex, UK
+                </p>
+              </li>
+              <li>
+                <p align="left">
+
+                  Prof. Rami S. Alkhawaldeh, University of Jordan, Jordan
+                </p>
+              </li>
+              <li>
+                <p align="left">
+
+                  Prof. Izabela Nielsen, Aalborg University, Denmark
+                </p>
+              </li>
+              <li>
+                <p align="left">
+
+                  Prof. Kuannan Techato, Prince of Songkla University, Thailand
+                </p>
+              </li>
+              <li>
+                <p align="left">
+
+                  Prof. Mohammad Sabati, University of Kansas, USA
+                </p>
+              </li>
+            </ul>
+
+            <span class="subhead_title">National Advisory Board</span>
+            <ul style="line-height: 70%">
+              <br>
+              <br>
+
+              <li>
+                <p align="left">
+                  Prof. S. G. Ponnambalam, VIT Vellore
+                </p>
+              </li>
+
+              <li>
+                <p align="left">
+                  Dr. K. Sankaranarayanaswamy, NIT Puducherry
+                </p>
+              </li>
+
+              <li>
+                <p align="left">
+                  Dr. Sanjay S Pande, IIT Bombay
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr I A Palani, IIT Indore
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr Arockia Selvakumar Arockia Doss, VIT Chennai
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr G. Satheesh Kumar, SSN Institutions
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr P. Gopinathan, CSIR-CIMFR, Dhanbad
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr Sudarsan Sahoo, NIT Silchar
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr G. Shanmugasundar, Sri Sai Ram Institute of Technology, Chennai
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr V. Dhinakaran, Chennai Institute of Technology, Chennai
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr Neeraj Kumar Rathore, IGNTU, Amarkantak
+                </p>
+              </li>
+              <li>
+                <p align="left">
+                  Dr Prem Kumar Chaurasiya, Bansal Institute of Science and Technology
+                </p>
               </li>
             </ul>
           </div>
@@ -502,15 +618,11 @@
             </tr>
             <tr>
               <td align="center">Research Scholars / Students </td>
-              <td align="center">2000</td>
-            </tr>
-            <tr>
-              <td align="center">Faculty</td>
               <td align="center">3000</td>
             </tr>
             <tr>
-              <td align="center">Industry </td>
-              <td align="center">5000</td>
+              <td align="center">Faculty/Industry</td>
+              <td align="center">4000</td>
             </tr>
             <tr>
               <td align="center">Foriegn Authors </td>
