--- a/index.html
+++ b/index.html
@@ -81,21 +81,20 @@
   </header>
   <section id="partner" class="section partner">
     <div class="row">
-      <div class="col-sm-2"> <a class="partner-box partner-box-uol" href="https://hindustanuniv.ac.in/anro/index.html">
+      <div class="col-sm-2"> <a class="partner-box partner-box-uol" href="https://le.ac.uk/">
           <font size="2">UK Partner
         </a></div>
-      <div class="col-sm-3"> <a class="partner-box partner-box-ssn" href="https://hindustanuniv.ac.in/anro/index.html">
+      <div class="col-sm-3"> <a class="partner-box partner-box-ssn" href="https://www.ssn.edu.in/">
           <font size="2">Academic Partner
         </a>
       </div>
-      <div class="col-sm-2"> <a class="partner-box partner-box-yagen"
-          href="https://hindustanuniv.ac.in/anro/index.html">
+      <div class="col-sm-2"> <a class="partner-box partner-box-yagen" href="https://www.yagenrobotics.com/">
           <font size="2">Industry Partner
         </a></div>
       <div class="col-sm-3"> <a class="partner-box partner-box-rae" href="https://www.raeng.org.uk/">
           <font size="2">Supported By
         </a></div>
-      <div class="col-sm-2"> <a class="partner-box partner-box-mvr" href="https://www.raeng.org.uk/">
+      <div class="col-sm-2"> <a class="partner-box partner-box-mvr">
           <font size="2">In Association With
         </a></div>
     </div>
@@ -211,9 +210,12 @@
         </div>
         <div class="col-sm-3">
           <h4><u>Templates and Styles -Download</u></h4>
-          <span class="subtext_head"><a href="assets/Template/RANE2023_Word_Template.docm">Click here for Microsoft Word
-              template </a></span><br>
           <br>
+          <span class="subtext_head"><a href="assets/Template/RANE2023_Word_Template.docm">Click here for Microsoft Word
+              template </a></span>
+          <br>
+          <span class="subtext_head"><a href="assets/Template/RANE2023_LaTeX_Template.tex">Click here for LaTeX
+              template </a></span>
         </div>
         <div class="col-sm-3">
           <center>
@@ -309,17 +311,17 @@
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="speaker">
-            <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/rob.jpg" height="110px"
-                width="110px"> </figure>
-            <h5>Dr Rob Thronton</h5>
-            <div class="speaker_name">Associate Professor<br>
-              <p>Structural Integrity University of Leicester, UK</p>
+            <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/palani.jpeg"
+                height="110px" width="110px"> </figure>
+            <h5>Dr I A Palani</h5>
+            <div class="speaker_name">Professor & Dead Research<br>
+              <p>Indian Institue of Technology, Indore</p>
             </div>
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="speaker">
-            <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/mukund.jpg"
+            <figure> <img alt="" class="img-responsive center-block" src="assets/images/speakers/mukund.jpeg"
                 height="120px" width="120px"> </figure>
             <h5>Dr Mukund Janardhanan</h5>
             <div class="speaker_name">Programme Director
